--- a/src/app/ui/components/login/login-popover/login-popover.component.html
+++ b/src/app/ui/components/login/login-popover/login-popover.component.html
@@ -39,4 +39,4 @@
       </form>
     </div>
   </div>
-  <div class="overlay" [class.show]="isVisible"></div>
+  <div class="overlay" [class.show]="isVisible" (click)="close()"></div>
