--- a/src/app/ui/components/user/user.component.scss
+++ b/src/app/ui/components/user/user.component.scss
@@ -14,6 +14,7 @@ $border-color: #e0e0e0;
 $hover-color: rgba($primary-color, 0.1);
 $success-color: #059669;
 $link-color: #0000ee;
+$light: #f8fafc;    
 
 // Mixins
 @mixin card-shadow {
@@ -332,11 +333,183 @@ $link-color: #0000ee;
 
   .modal-body {
     padding: 1.5rem;
+    .form-group:last-child {
+      margin-bottom: 0;
+    }
   }
 
   .modal-footer {
     padding: 1.25rem;
     border-top: 1px solid $border-color;
+  }
+}
+.gx-2 {
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+
+  > [class*="col-"] {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+}
+
+.mt-3 {
+  margin-top: 1rem;
+}
+
+// Custom switch styles
+.custom-control {
+  padding-left: 2.5rem;
+  min-height: 1.5rem;
+  margin-top: 2rem;
+}
+
+.custom-control-input {
+  position: absolute;
+  left: 0;
+  z-index: -1;
+  width: 1rem;
+  height: 1.25rem;
+  opacity: 0;
+}
+
+.custom-control-label {
+  position: relative;
+  margin-bottom: 0;
+  vertical-align: top;
+  cursor: pointer;
+
+  &::before {
+    position: absolute;
+    top: 0.25rem;
+    left: -2.5rem;
+    width: 2rem;
+    height: 1rem;
+    background-color: $border-color;
+    border-radius: 0.5rem;
+    content: "";
+  }
+
+  &::after {
+    position: absolute;
+    top: 0.25rem;
+    left: -2.5rem;
+    width: 1rem;
+    height: 1rem;
+    background-color: $light-text;
+    border-radius: 0.5rem;
+    content: "";
+    transition: transform 0.15s ease-in-out, background-color 0.15s ease-in-out;
+  }
+}
+
+.custom-switch .custom-control-input:checked ~ .custom-control-label::after {
+  background-color: $light-text;
+  transform: translateX(1rem);
+}
+
+.custom-switch .custom-control-input:checked ~ .custom-control-label::before {
+  background-color: $success-color;
+}
+
+.form-field {
+  margin-bottom: 1.5rem;
+  position: relative;
+
+  label {
+    display: block;
+    margin-bottom: 0.5rem;
+    color: $text-color;
+    font-weight: 500;
+  }
+
+  .input-wrapper {
+    display: flex;
+    align-items: stretch;
+    position: relative;
+
+    .icon-wrapper {
+      display: flex;
+      align-items: center;
+      padding: 0.5rem 0.75rem;
+      background-color: $light;
+      border: 1px solid $border-color;
+      border-right: none;
+      border-radius: 4px 0 0 4px;
+      color: $text-color;
+
+      i {
+        width: 16px;
+        text-align: center;
+      }
+    }
+
+    .form-input {
+      flex: 1;
+      padding: 0.5rem 0.75rem;
+      border: 1px solid $border-color;
+      border-radius: 0 4px 4px 0;
+      font-size: 1rem;
+
+      &:focus {
+        outline: none;
+        border-color: $home-primary-color;
+        box-shadow: 0 0 0 0.2rem rgba($home-primary-color, 0.1);
+      }
+
+      &.is-invalid {
+        border-color: $primary-color;
+      }
+
+      &::placeholder {
+        color: rgba($text-color, 0.5);
+      }
+    }
+  }
+
+  .error-message {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    margin-top: 0.25rem;
+    color: $primary-color;
+    font-size: 0.8125rem;
+  }
+}
+.form-group {
+  margin-bottom: 1rem;
+  position: relative;
+
+  .input-group {
+    position: relative;
+  }
+
+  .invalid-feedback {
+    display: none;
+    position: absolute;
+    left: 0;
+    bottom: -20px;
+    font-size: 0.875rem;
+    color: $primary-color;
+    
+    &.d-block {
+      display: block;
+    }
+  }
+
+  .form-control.is-invalid {
+    border-color: $primary-color;
+    padding-right: calc(1.5em + 0.75rem);
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23dc3545'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23dc3545' stroke='none'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: right calc(0.375em + 0.1875rem) center;
+    background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  }
+
+  .input-group {
+    .form-control.is-invalid {
+      z-index: 3;
+    }
   }
 }
 
