--- a/src/app/ui/components/user/user.component.html
+++ b/src/app/ui/components/user/user.component.html
@@ -497,7 +497,7 @@
                                 </span>
                             </div>
                             <input type="tel" formControlName="number" class="form-control"
-                                placeholder="Enter 10-digit phone number (05XX XXX XX XX)" [class.is-invalid]="(phoneForm.get('number')?.errors?.['required'] || 
+                                placeholder="Enter  phone number" [class.is-invalid]="(phoneForm.get('number')?.errors?.['required'] || 
                                       phoneForm.get('number')?.errors?.['invalidPhone']) && 
                                       phoneForm.get('number')?.touched">
                         </div>
