--- a/src/app/ui/components/register/register-popover/register-popover.component.html
+++ b/src/app/ui/components/register/register-popover/register-popover.component.html
@@ -63,32 +63,47 @@
         <input type="password" 
                formControlName="password" 
                class="form-control" 
-               id="password"
-               [ngClass]="{'is-invalid': (component['password'].invalid && component['password'].dirty) || 
-                          (submitted && component['password'].invalid)}">
+               id="password" 
+               [ngClass]="{
+                 'is-invalid': ((component['password'].invalid && component['password'].dirty) || 
+                               (submitted && component['password'].invalid)),
+                 'is-valid': component['password'].valid && component['password'].dirty && 
+                            component['password'].value?.length >= 8 && passwordRequirements.uppercase && 
+                            passwordRequirements.lowercase && passwordRequirements.symbol
+               }">
         <label for="password">Password</label>
-        <div class="invalid-feedback" *ngIf="component['password'].invalid && 
-             (component['password'].dirty || submitted)">
+        <div class="invalid-feedback" *ngIf="(component['password'].dirty || submitted) && component['password'].invalid">
           <span *ngIf="component['password'].errors?.['required']">Password is required.</span>
-          <ul *ngIf="passwordRequirements">
-            <li *ngIf="!passwordRequirements.uppercase">Password must contain at least one uppercase letter.</li>
-            <li *ngIf="!passwordRequirements.lowercase">Password must contain at least one lowercase letter.</li>
-            <li *ngIf="!passwordRequirements.symbol">Password must contain at least one symbol.</li>
-            <li *ngIf="!passwordRequirements.length">Password must be at least 8 characters long.</li>
+          <ul *ngIf="component['password'].value">
+            <li [class.text-success]="passwordRequirements.uppercase">
+              <i [class]="passwordRequirements.uppercase ? 'fas fa-check' : 'fas fa-times'"></i>
+              Must contain at least one uppercase letter
+            </li>
+            <li [class.text-success]="passwordRequirements.lowercase">
+              <i [class]="passwordRequirements.lowercase ? 'fas fa-check' : 'fas fa-times'"></i>
+              Must contain at least one lowercase letter
+            </li>
+            <li [class.text-success]="passwordRequirements.symbol">
+              <i [class]="passwordRequirements.symbol ? 'fas fa-check' : 'fas fa-times'"></i>
+              Must contain at least one symbol
+            </li>
+            <li [class.text-success]="passwordRequirements.length">
+              <i [class]="passwordRequirements.length ? 'fas fa-check' : 'fas fa-times'"></i>
+              Must be at least 8 characters long
+            </li>
           </ul>
         </div>
       </div>
-  
+
       <div class="form-floating">
         <input type="password" 
                formControlName="confirmPassword" 
                class="form-control" 
                id="confirmPassword"
-               [ngClass]="{'is-invalid': (component['confirmPassword'].invalid && component['confirmPassword'].dirty) || 
-                          (submitted && component['confirmPassword'].invalid)}">
+               [ngClass]="{'is-invalid': (frm.get('confirmPassword').invalid && frm.get('confirmPassword').dirty) || (submitted && frm.get('confirmPassword').invalid),
+                          'is-valid': frm.get('confirmPassword').valid && frm.get('password').value === frm.get('confirmPassword').value}">
         <label for="confirmPassword">Confirm Password</label>
-        <div class="invalid-feedback" *ngIf="component['confirmPassword'].invalid && 
-             (component['confirmPassword'].dirty || submitted)">
+        <div class="invalid-feedback" *ngIf="component['confirmPassword'].invalid && (component['confirmPassword'].dirty || submitted)">
           <span *ngIf="component['confirmPassword'].errors?.['required']">Please confirm your password.</span>
           <span *ngIf="component['confirmPassword'].errors?.['notSame']">Passwords do not match.</span>
         </div>
