--- a/src/app/admin/components/brands/brand-list/brand-list.component.html
+++ b/src/app/admin/components/brands/brand-list/brand-list.component.html
@@ -39,6 +39,17 @@
           <td mat-cell *matCellDef="let item">{{ item.name }}</td>
         </ng-container>
 
+        <ng-container matColumnDef="Update">
+          <th mat-header-cell *matHeaderCellDef width="45">Güncelle</th>
+          <td mat-cell *matCellDef="let item">
+            <div class="updateButton">
+              <button mat-mini-fab (click)="navigateToUpdate(item.id)" class="edit-button-list">
+                <mat-icon>edit</mat-icon>
+              </button> 
+            </div>
+          </td>
+        </ng-container>
+
         <ng-container matColumnDef="Delete">
           <th mat-header-cell *matHeaderCellDef class="header-cell">Sil</th>
           <td mat-cell *matCellDef="let item">
