--- a/src/app/ui/components/category/category.component.html
+++ b/src/app/ui/components/category/category.component.html
@@ -42,13 +42,13 @@
         </button>
 
         <div class="category-grid" #categoryGrid>
-          <div class="category-card" *ngFor="let category of subCategories" [routerLink]="['/category', category.id]">
+          <div class="category-card" *ngFor="let category of subCategories" [routerLink]="['/'+category.id]">
             <div class="category-image">
               <img [src]="category.categoryImage?.url" [alt]="category.name">
             </div>
             <div class="category-content">
               <h3 class="category-title">{{ category.name }}</h3>
-              <a class="btn-category" [routerLink]="['/category', category.id]" *ngIf="isMobile">İncele</a>
+              <a class="btn-category" [routerLink]="['/'+category.id]" *ngIf="isMobile">İncele</a>
             </div>
           </div>
         </div>
