--- a/src/app/ui/components/home/home.component.html
+++ b/src/app/ui/components/home/home.component.html
@@ -36,7 +36,7 @@
   <h2 class="category-header"*ngIf="!isMobile">KATEGORİLER</h2>
   <div class="container">
     <div class="category-grid" #categoryGrid>
-      <div class="category-card" *ngFor="let category of mainCategories" [routerLink]="['/category', category.id]">
+      <div class="category-card" *ngFor="let category of mainCategories" [routerLink]="['/'+category.id]">
         <div class="category-image">
           <img [src]="category.categoryImage?.url" [alt]="category.name">
         </div>
