--- a/src/app/ui/components/product/product-card/product-card.component.html
+++ b/src/app/ui/components/product/product-card/product-card.component.html
@@ -1,6 +1,6 @@
 <div class="product-card" 
-         [class.grid-view]="gridView"
-         [routerLink]="['/product', product.id]">
+     [class.grid-view]="gridView"
+     (click)="onCardClick()">
       <div class="product-image">
         <img [src]="product.showcaseImage?.url || 'assets/default-product-image.jpg'" 
              [alt]="product.name">
